fixed nested routes, move list bookings to Booking tag, change API url accordingly
